--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "styled-components": "^5.3.5",
     "tslib": "^2.4.0",
     "typescript": "^4.8.2"
-  }
+  },
+  "files": [
+    "dist"
+  ],
+  "types": "dist/index.d.ts"
 }
